@@ -1217,6 +1217,11 @@ string pqxx::connection_base::quote_name(const string &identifier)
   if (!buf.get()) throw failure(ErrMsg());
   return string(buf.get());
 #else
+  for (string::const_iterator i = identifier.begin(); i!=identifier.end(); ++i)
+    if (*i == '\\' || *i == '\'' || *i == '"')
+      throw feature_not_supported(
+	"Identifier contains characters that are difficult to escape; "
+	"this requires a newer libpq version.");
   return "\"" + identifier + "\"";
 #endif
 }
